adding schemato emoji model

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "main": "app.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/anonymous node/sails user/my-project.git"
+    "url": "git://github.com/anonymous node/sails user/test-sails-project.git"
   },
   "author": "anonymous node/sails user",
   "license": ""
